erDiagram
    TAMU ||--o{ RESERVASI : membuat
    PEGAWAI ||--o{ RESERVASI : menangani
    TIPE_KAMAR ||--o{ KAMAR : memiliki
    KAMAR ||--o{ DETAIL_RESERVASI : dipesan_dalam
    RESERVASI ||--|{ DETAIL_RESERVASI : memiliki
    RESERVASI ||--o{ PEMBAYARAN : dibayar
    RESERVASI ||--o| CHECKIN : memiliki
    RESERVASI ||--o| CHECKOUT : memiliki
    PEGAWAI ||--o{ CHECKIN : mencatat
    PEGAWAI ||--o{ CHECKOUT : mencatat
    KAMAR ||--o{ KAMAR_FASILITAS : memiliki
    FASILITAS ||--o{ KAMAR_FASILITAS : tersedia_di
    PEGAWAI ||--o{ LOG_AKTIVITAS : mencatat

    TAMU {
        int id_tamu PK
        varchar nama_tamu
        varchar no_identitas UK
        varchar jenis_kelamin
        varchar no_telepon
        varchar email UK
        text alamat
        timestamp created_at
    }

    PEGAWAI {
        int id_pegawai PK
        varchar nama_pegawai
        varchar jabatan
        varchar no_telepon
        varchar email UK
        timestamp created_at
    }

    TIPE_KAMAR {
        int id_tipe_kamar PK
        varchar nama_tipe UK
        int kapasitas
        decimal harga_per_malam
        text deskripsi
    }

    KAMAR {
        int id_kamar PK
        int id_tipe_kamar FK
        varchar nomor_kamar UK
        varchar lantai
        varchar status_kamar
    }

    RESERVASI {
        int id_reservasi PK
        int id_tamu FK
        int id_pegawai FK
        date tanggal_reservasi
        date tanggal_checkin_rencana
        date tanggal_checkout_rencana
        varchar status_reservasi
    }

    DETAIL_RESERVASI {
        int id_detail_reservasi PK
        int id_reservasi FK
        int id_kamar FK
        int jumlah_malam
        decimal harga_per_malam
        decimal subtotal
    }

    PEMBAYARAN {
        int id_pembayaran PK
        int id_reservasi FK
        date tanggal_pembayaran
        decimal jumlah_bayar
        varchar metode_pembayaran
        varchar status_pembayaran
    }

    CHECKIN {
        int id_checkin PK
        int id_reservasi FK
        datetime waktu_checkin
        int id_pegawai FK
        text catatan
    }

    CHECKOUT {
        int id_checkout PK
        int id_reservasi FK
        datetime waktu_checkout
        int id_pegawai FK
        decimal biaya_tambahan
        text catatan
    }

    FASILITAS {
        int id_fasilitas PK
        varchar nama_fasilitas UK
        text deskripsi
    }

    KAMAR_FASILITAS {
        int id_kamar PK, FK
        int id_fasilitas PK, FK
    }

    LOG_AKTIVITAS {
        int id_log PK
        int id_pegawai FK
        varchar aktivitas
        datetime waktu_aktivitas
        text keterangan
    }